parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    INT

Grammar

Rule 0     S' -> input
Rule 1     input -> <empty>
Rule 2     input -> command input
Rule 3     command -> COMMENT
Rule 4     SYMBOL -> XYZ
Rule 5     SYMBOL -> ID
Rule 6     TEXT -> SYMBOL
Rule 7     TEXT -> STRING
Rule 8     NUMBER -> DOUBLE
Rule 9     command -> POP
Rule 10    command -> PUSH
Rule 11    command -> SCREEN NUMBER NUMBER
Rule 12    command -> SCREEN
Rule 13    command -> SAVE TEXT TEXT
Rule 14    command -> DISPLAY
Rule 15    command -> SPHERE NUMBER NUMBER NUMBER NUMBER
Rule 16    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 17    command -> SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 18    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 19    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 20    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 21    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 22    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 23    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 24    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 25    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 26    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 27    command -> CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 28    command -> CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 29    command -> CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 30    command -> CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 31    command -> CONE NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 32    command -> CONE NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 33    command -> CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 34    command -> CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 35    command -> PYRAMID NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 36    command -> PYRAMID NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 37    command -> PYRAMID SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 38    command -> PYRAMID SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 39    command -> WEDGE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 40    command -> WEDGE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 41    command -> WEDGE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 42    command -> WEDGE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 43    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 44    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 45    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 46    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 47    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 48    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 49    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 50    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 51    command -> MOVE_LIGHT NUMBER NUMBER NUMBER
Rule 52    command -> MOVE_LIGHT NUMBER NUMBER NUMBER SYMBOL
Rule 53    command -> MOVE_LIGHT SYMBOL NUMBER NUMBER NUMBER
Rule 54    command -> MOVE_LIGHT SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 55    command -> MOVE NUMBER NUMBER NUMBER SYMBOL
Rule 56    command -> MOVE NUMBER NUMBER NUMBER
Rule 57    command -> SCALE NUMBER NUMBER NUMBER SYMBOL
Rule 58    command -> SCALE NUMBER NUMBER NUMBER
Rule 59    command -> ROTATE XYZ NUMBER SYMBOL
Rule 60    command -> ROTATE XYZ NUMBER
Rule 61    command -> FRAMES NUMBER
Rule 62    command -> BASENAME TEXT
Rule 63    command -> VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 64    command -> SET SYMBOL NUMBER
Rule 65    command -> SET_KNOBS NUMBER
Rule 66    command -> AMBIENT NUMBER NUMBER NUMBER
Rule 67    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 68    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 69    command -> LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 70    command -> SHADING SHADING_TYPE
Rule 71    command -> CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 72    command -> GENERATE_RAYFILES
Rule 73    command -> MESH CO TEXT
Rule 74    command -> MESH SYMBOL CO TEXT
Rule 75    command -> MESH CO TEXT SYMBOL
Rule 76    command -> MESH SYMBOL CO TEXT SYMBOL
Rule 77    command -> SAVE_KNOBS SYMBOL
Rule 78    command -> SAVE_COORDS SYMBOL
Rule 79    command -> TWEEN NUMBER NUMBER SYMBOL SYMBOL
Rule 80    command -> FOCAL NUMBER
Rule 81    command -> WEB
Rule 82    command -> TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

Terminals, with rules where they appear

AMBIENT              : 66
BASENAME             : 62
BOX                  : 23 24 25 26
CAMERA               : 71
CO                   : 73 74 75 76
COMMENT              : 3
CONE                 : 31 32 33 34
CONSTANTS            : 67 68
CYLINDER             : 27 28 29 30
DISPLAY              : 14
DOUBLE               : 8
FOCAL                : 80
FRAMES               : 61
GENERATE_RAYFILES    : 72
ID                   : 5
INT                  : 
LIGHT                : 69
LINE                 : 43 44 45 46 47 48 49 50
MESH                 : 73 74 75 76
MOVE                 : 55 56
MOVE_LIGHT           : 51 52 53 54
POP                  : 9
PUSH                 : 10
PYRAMID              : 35 36 37 38
ROTATE               : 59 60
SAVE                 : 13
SAVE_COORDS          : 78
SAVE_KNOBS           : 77
SCALE                : 57 58
SCREEN               : 11 12
SET                  : 64
SET_KNOBS            : 65
SHADING              : 70
SHADING_TYPE         : 70
SPHERE               : 15 16 17 18
STRING               : 7
TEXTURE              : 82
TORUS                : 19 20 21 22
TWEEN                : 79
VARY                 : 63
WEB                  : 81
WEDGE                : 39 40 41 42
XYZ                  : 4 59 60
error                : 

Nonterminals, with rules where they appear

NUMBER               : 11 11 15 15 15 15 16 16 16 16 17 17 17 17 18 18 18 18 19 19 19 19 19 20 20 20 20 20 21 21 21 21 21 22 22 22 22 22 23 23 23 23 23 23 24 24 24 24 24 24 25 25 25 25 25 25 26 26 26 26 26 26 27 27 27 27 27 28 28 28 28 28 29 29 29 29 29 30 30 30 30 30 31 31 31 31 31 32 32 32 32 32 33 33 33 33 33 34 34 34 34 34 35 35 35 35 35 35 36 36 36 36 36 36 37 37 37 37 37 37 38 38 38 38 38 38 39 39 39 39 39 39 40 40 40 40 40 40 41 41 41 41 41 41 42 42 42 42 42 42 43 43 43 43 43 43 44 44 44 44 44 44 45 45 45 45 45 45 46 46 46 46 46 46 47 47 47 47 47 47 48 48 48 48 48 48 49 49 49 49 49 49 50 50 50 50 50 50 51 51 51 52 52 52 53 53 53 54 54 54 55 55 55 56 56 56 57 57 57 58 58 58 59 60 61 63 63 63 63 64 65 66 66 66 67 67 67 67 67 67 67 67 67 68 68 68 68 68 68 68 68 68 68 68 68 69 69 69 69 69 69 71 71 71 71 71 71 79 79 80 82 82 82 82 82 82 82 82 82 82 82 82
SYMBOL               : 6 16 17 18 18 20 21 22 22 24 25 26 26 28 29 30 30 32 33 34 34 36 37 38 38 40 41 42 42 44 45 46 46 47 48 48 49 49 50 50 50 52 53 54 54 55 57 59 63 64 67 68 69 74 75 76 76 77 78 79 79 82
TEXT                 : 13 13 62 73 74 75 76
command              : 2
input                : 2 0

Parsing method: LALR

state 0

    (0) S' -> . input
    (1) input -> .
    (2) input -> . command input
    (3) command -> . COMMENT
    (9) command -> . POP
    (10) command -> . PUSH
    (11) command -> . SCREEN NUMBER NUMBER
    (12) command -> . SCREEN
    (13) command -> . SAVE TEXT TEXT
    (14) command -> . DISPLAY
    (15) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (16) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (17) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
    (18) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (19) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (21) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (23) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (25) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (27) command -> . CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER
    (28) command -> . CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (29) command -> . CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (30) command -> . CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (31) command -> . CONE NUMBER NUMBER NUMBER NUMBER NUMBER
    (32) command -> . CONE NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (33) command -> . CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (34) command -> . CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (35) command -> . PYRAMID NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) command -> . PYRAMID NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (37) command -> . PYRAMID SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (38) command -> . PYRAMID SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (39) command -> . WEDGE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (40) command -> . WEDGE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (41) command -> . WEDGE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (42) command -> . WEDGE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (43) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (44) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (45) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (46) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (47) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (48) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (49) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (50) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (51) command -> . MOVE_LIGHT NUMBER NUMBER NUMBER
    (52) command -> . MOVE_LIGHT NUMBER NUMBER NUMBER SYMBOL
    (53) command -> . MOVE_LIGHT SYMBOL NUMBER NUMBER NUMBER
    (54) command -> . MOVE_LIGHT SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (55) command -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (56) command -> . MOVE NUMBER NUMBER NUMBER
    (57) command -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (58) command -> . SCALE NUMBER NUMBER NUMBER
    (59) command -> . ROTATE XYZ NUMBER SYMBOL
    (60) command -> . ROTATE XYZ NUMBER
    (61) command -> . FRAMES NUMBER
    (62) command -> . BASENAME TEXT
    (63) command -> . VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
    (64) command -> . SET SYMBOL NUMBER
    (65) command -> . SET_KNOBS NUMBER
    (66) command -> . AMBIENT NUMBER NUMBER NUMBER
    (67) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (68) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (69) command -> . LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (70) command -> . SHADING SHADING_TYPE
    (71) command -> . CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (72) command -> . GENERATE_RAYFILES
    (73) command -> . MESH CO TEXT
    (74) command -> . MESH SYMBOL CO TEXT
    (75) command -> . MESH CO TEXT SYMBOL
    (76) command -> . MESH SYMBOL CO TEXT SYMBOL
    (77) command -> . SAVE_KNOBS SYMBOL
    (78) command -> . SAVE_COORDS SYMBOL
    (79) command -> . TWEEN NUMBER NUMBER SYMBOL SYMBOL
    (80) command -> . FOCAL NUMBER
    (81) command -> . WEB
    (82) command -> . TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    $end            reduce using rule 1 (input -> .)
    COMMENT         shift and go to state 3
    POP             shift and go to state 4
    PUSH            shift and go to state 5
    SCREEN          shift and go to state 6
    SAVE            shift and go to state 7
    DISPLAY         shift and go to state 8
    SPHERE          shift and go to state 9
    TORUS           shift and go to state 10
    BOX             shift and go to state 11
    CYLINDER        shift and go to state 12
    CONE            shift and go to state 13
    PYRAMID         shift and go to state 14
    WEDGE           shift and go to state 15
    LINE            shift and go to state 16
    MOVE_LIGHT      shift and go to state 17
    MOVE            shift and go to state 18
    SCALE           shift and go to state 19
    ROTATE          shift and go to state 20
    FRAMES          shift and go to state 21
    BASENAME        shift and go to state 22
    VARY            shift and go to state 23
    SET             shift and go to state 24
    SET_KNOBS       shift and go to state 25
    AMBIENT         shift and go to state 26
    CONSTANTS       shift and go to state 27
    LIGHT           shift and go to state 28
    SHADING         shift and go to state 29
    CAMERA          shift and go to state 30
    GENERATE_RAYFILES shift and go to state 31
    MESH            shift and go to state 32
    SAVE_KNOBS      shift and go to state 33
    SAVE_COORDS     shift and go to state 34
    TWEEN           shift and go to state 35
    FOCAL           shift and go to state 36
    WEB             shift and go to state 37
    TEXTURE         shift and go to state 38

    input                          shift and go to state 1
    command                        shift and go to state 2

state 1

    (0) S' -> input .



state 2

    (2) input -> command . input
    (1) input -> .
    (2) input -> . command input
    (3) command -> . COMMENT
    (9) command -> . POP
    (10) command -> . PUSH
    (11) command -> . SCREEN NUMBER NUMBER
    (12) command -> . SCREEN
    (13) command -> . SAVE TEXT TEXT
    (14) command -> . DISPLAY
    (15) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (16) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (17) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
    (18) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (19) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (21) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (23) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (25) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (27) command -> . CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER
    (28) command -> . CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (29) command -> . CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (30) command -> . CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (31) command -> . CONE NUMBER NUMBER NUMBER NUMBER NUMBER
    (32) command -> . CONE NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (33) command -> . CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (34) command -> . CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (35) command -> . PYRAMID NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) command -> . PYRAMID NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (37) command -> . PYRAMID SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (38) command -> . PYRAMID SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (39) command -> . WEDGE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (40) command -> . WEDGE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (41) command -> . WEDGE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (42) command -> . WEDGE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (43) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (44) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (45) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (46) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (47) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (48) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (49) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (50) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (51) command -> . MOVE_LIGHT NUMBER NUMBER NUMBER
    (52) command -> . MOVE_LIGHT NUMBER NUMBER NUMBER SYMBOL
    (53) command -> . MOVE_LIGHT SYMBOL NUMBER NUMBER NUMBER
    (54) command -> . MOVE_LIGHT SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (55) command -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (56) command -> . MOVE NUMBER NUMBER NUMBER
    (57) command -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (58) command -> . SCALE NUMBER NUMBER NUMBER
    (59) command -> . ROTATE XYZ NUMBER SYMBOL
    (60) command -> . ROTATE XYZ NUMBER
    (61) command -> . FRAMES NUMBER
    (62) command -> . BASENAME TEXT
    (63) command -> . VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
    (64) command -> . SET SYMBOL NUMBER
    (65) command -> . SET_KNOBS NUMBER
    (66) command -> . AMBIENT NUMBER NUMBER NUMBER
    (67) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (68) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (69) command -> . LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (70) command -> . SHADING SHADING_TYPE
    (71) command -> . CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (72) command -> . GENERATE_RAYFILES
    (73) command -> . MESH CO TEXT
    (74) command -> . MESH SYMBOL CO TEXT
    (75) command -> . MESH CO TEXT SYMBOL
    (76) command -> . MESH SYMBOL CO TEXT SYMBOL
    (77) command -> . SAVE_KNOBS SYMBOL
    (78) command -> . SAVE_COORDS SYMBOL
    (79) command -> . TWEEN NUMBER NUMBER SYMBOL SYMBOL
    (80) command -> . FOCAL NUMBER
    (81) command -> . WEB
    (82) command -> . TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    $end            reduce using rule 1 (input -> .)
    COMMENT         shift and go to state 3
    POP             shift and go to state 4
    PUSH            shift and go to state 5
    SCREEN          shift and go to state 6
    SAVE            shift and go to state 7
    DISPLAY         shift and go to state 8
    SPHERE          shift and go to state 9
    TORUS           shift and go to state 10
    BOX             shift and go to state 11
    CYLINDER        shift and go to state 12
    CONE            shift and go to state 13
    PYRAMID         shift and go to state 14
    WEDGE           shift and go to state 15
    LINE            shift and go to state 16
    MOVE_LIGHT      shift and go to state 17
    MOVE            shift and go to state 18
    SCALE           shift and go to state 19
    ROTATE          shift and go to state 20
    FRAMES          shift and go to state 21
    BASENAME        shift and go to state 22
    VARY            shift and go to state 23
    SET             shift and go to state 24
    SET_KNOBS       shift and go to state 25
    AMBIENT         shift and go to state 26
    CONSTANTS       shift and go to state 27
    LIGHT           shift and go to state 28
    SHADING         shift and go to state 29
    CAMERA          shift and go to state 30
    GENERATE_RAYFILES shift and go to state 31
    MESH            shift and go to state 32
    SAVE_KNOBS      shift and go to state 33
    SAVE_COORDS     shift and go to state 34
    TWEEN           shift and go to state 35
    FOCAL           shift and go to state 36
    WEB             shift and go to state 37
    TEXTURE         shift and go to state 38

    command                        shift and go to state 2
    input                          shift and go to state 39

state 3

    (3) command -> COMMENT .

    COMMENT         reduce using rule 3 (command -> COMMENT .)
    POP             reduce using rule 3 (command -> COMMENT .)
    PUSH            reduce using rule 3 (command -> COMMENT .)
    SCREEN          reduce using rule 3 (command -> COMMENT .)
    SAVE            reduce using rule 3 (command -> COMMENT .)
    DISPLAY         reduce using rule 3 (command -> COMMENT .)
    SPHERE          reduce using rule 3 (command -> COMMENT .)
    TORUS           reduce using rule 3 (command -> COMMENT .)
    BOX             reduce using rule 3 (command -> COMMENT .)
    CYLINDER        reduce using rule 3 (command -> COMMENT .)
    CONE            reduce using rule 3 (command -> COMMENT .)
    PYRAMID         reduce using rule 3 (command -> COMMENT .)
    WEDGE           reduce using rule 3 (command -> COMMENT .)
    LINE            reduce using rule 3 (command -> COMMENT .)
    MOVE_LIGHT      reduce using rule 3 (command -> COMMENT .)
    MOVE            reduce using rule 3 (command -> COMMENT .)
    SCALE           reduce using rule 3 (command -> COMMENT .)
    ROTATE          reduce using rule 3 (command -> COMMENT .)
    FRAMES          reduce using rule 3 (command -> COMMENT .)
    BASENAME        reduce using rule 3 (command -> COMMENT .)
    VARY            reduce using rule 3 (command -> COMMENT .)
    SET             reduce using rule 3 (command -> COMMENT .)
    SET_KNOBS       reduce using rule 3 (command -> COMMENT .)
    AMBIENT         reduce using rule 3 (command -> COMMENT .)
    CONSTANTS       reduce using rule 3 (command -> COMMENT .)
    LIGHT           reduce using rule 3 (command -> COMMENT .)
    SHADING         reduce using rule 3 (command -> COMMENT .)
    CAMERA          reduce using rule 3 (command -> COMMENT .)
    GENERATE_RAYFILES reduce using rule 3 (command -> COMMENT .)
    MESH            reduce using rule 3 (command -> COMMENT .)
    SAVE_KNOBS      reduce using rule 3 (command -> COMMENT .)
    SAVE_COORDS     reduce using rule 3 (command -> COMMENT .)
    TWEEN           reduce using rule 3 (command -> COMMENT .)
    FOCAL           reduce using rule 3 (command -> COMMENT .)
    WEB             reduce using rule 3 (command -> COMMENT .)
    TEXTURE         reduce using rule 3 (command -> COMMENT .)
    $end            reduce using rule 3 (command -> COMMENT .)


state 4

    (9) command -> POP .

    COMMENT         reduce using rule 9 (command -> POP .)
    POP             reduce using rule 9 (command -> POP .)
    PUSH            reduce using rule 9 (command -> POP .)
    SCREEN          reduce using rule 9 (command -> POP .)
    SAVE            reduce using rule 9 (command -> POP .)
    DISPLAY         reduce using rule 9 (command -> POP .)
    SPHERE          reduce using rule 9 (command -> POP .)
    TORUS           reduce using rule 9 (command -> POP .)
    BOX             reduce using rule 9 (command -> POP .)
    CYLINDER        reduce using rule 9 (command -> POP .)
    CONE            reduce using rule 9 (command -> POP .)
    PYRAMID         reduce using rule 9 (command -> POP .)
    WEDGE           reduce using rule 9 (command -> POP .)
    LINE            reduce using rule 9 (command -> POP .)
    MOVE_LIGHT      reduce using rule 9 (command -> POP .)
    MOVE            reduce using rule 9 (command -> POP .)
    SCALE           reduce using rule 9 (command -> POP .)
    ROTATE          reduce using rule 9 (command -> POP .)
    FRAMES          reduce using rule 9 (command -> POP .)
    BASENAME        reduce using rule 9 (command -> POP .)
    VARY            reduce using rule 9 (command -> POP .)
    SET             reduce using rule 9 (command -> POP .)
    SET_KNOBS       reduce using rule 9 (command -> POP .)
    AMBIENT         reduce using rule 9 (command -> POP .)
    CONSTANTS       reduce using rule 9 (command -> POP .)
    LIGHT           reduce using rule 9 (command -> POP .)
    SHADING         reduce using rule 9 (command -> POP .)
    CAMERA          reduce using rule 9 (command -> POP .)
    GENERATE_RAYFILES reduce using rule 9 (command -> POP .)
    MESH            reduce using rule 9 (command -> POP .)
    SAVE_KNOBS      reduce using rule 9 (command -> POP .)
    SAVE_COORDS     reduce using rule 9 (command -> POP .)
    TWEEN           reduce using rule 9 (command -> POP .)
    FOCAL           reduce using rule 9 (command -> POP .)
    WEB             reduce using rule 9 (command -> POP .)
    TEXTURE         reduce using rule 9 (command -> POP .)
    $end            reduce using rule 9 (command -> POP .)


state 5

    (10) command -> PUSH .

    COMMENT         reduce using rule 10 (command -> PUSH .)
    POP             reduce using rule 10 (command -> PUSH .)
    PUSH            reduce using rule 10 (command -> PUSH .)
    SCREEN          reduce using rule 10 (command -> PUSH .)
    SAVE            reduce using rule 10 (command -> PUSH .)
    DISPLAY         reduce using rule 10 (command -> PUSH .)
    SPHERE          reduce using rule 10 (command -> PUSH .)
    TORUS           reduce using rule 10 (command -> PUSH .)
    BOX             reduce using rule 10 (command -> PUSH .)
    CYLINDER        reduce using rule 10 (command -> PUSH .)
    CONE            reduce using rule 10 (command -> PUSH .)
    PYRAMID         reduce using rule 10 (command -> PUSH .)
    WEDGE           reduce using rule 10 (command -> PUSH .)
    LINE            reduce using rule 10 (command -> PUSH .)
    MOVE_LIGHT      reduce using rule 10 (command -> PUSH .)
    MOVE            reduce using rule 10 (command -> PUSH .)
    SCALE           reduce using rule 10 (command -> PUSH .)
    ROTATE          reduce using rule 10 (command -> PUSH .)
    FRAMES          reduce using rule 10 (command -> PUSH .)
    BASENAME        reduce using rule 10 (command -> PUSH .)
    VARY            reduce using rule 10 (command -> PUSH .)
    SET             reduce using rule 10 (command -> PUSH .)
    SET_KNOBS       reduce using rule 10 (command -> PUSH .)
    AMBIENT         reduce using rule 10 (command -> PUSH .)
    CONSTANTS       reduce using rule 10 (command -> PUSH .)
    LIGHT           reduce using rule 10 (command -> PUSH .)
    SHADING         reduce using rule 10 (command -> PUSH .)
    CAMERA          reduce using rule 10 (command -> PUSH .)
    GENERATE_RAYFILES reduce using rule 10 (command -> PUSH .)
    MESH            reduce using rule 10 (command -> PUSH .)
    SAVE_KNOBS      reduce using rule 10 (command -> PUSH .)
    SAVE_COORDS     reduce using rule 10 (command -> PUSH .)
    TWEEN           reduce using rule 10 (command -> PUSH .)
    FOCAL           reduce using rule 10 (command -> PUSH .)
    WEB             reduce using rule 10 (command -> PUSH .)
    TEXTURE         reduce using rule 10 (command -> PUSH .)
    $end            reduce using rule 10 (command -> PUSH .)


state 6

    (11) command -> SCREEN . NUMBER NUMBER
    (12) command -> SCREEN .
    (8) NUMBER -> . DOUBLE
